--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "### __1. Introduksjon__\n",
     "\n",
-    "Her kommer en introduksjon"
+    "Dette prosjektet har gått ut på å studere en kule som ruller, uten glidning ned en bane. Banen ble konstruert med åtte punkter plassert i jevne avstander på 0,2 meter. Hvert punkt hadde en distinkt høyde, men oversteg aldri startpunktets høyde på 0,3 meter. Med banen som grunnlag, anvendte vi teoretiske formler til å beregne tidsavhengige funksjoner for farten, helningsvinkelen, normalkraften og friksjonskraften. Videre ble ti eksperimentelle forsøk gjennomført. Disse ble benyttet til sammenligning til de teoretiske beregningene."
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "### __2. Teori__\n",
     "\n",
-    "Her kommer teori"
+    "Her kommer det teori"
    ]
   },
   {
