--- a/teori.ipynb
+++ b/teori.ipynb
@@ -4,96 +4,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intro\n",
-    "Med utgangspunkt i baneformen y(x) og dens 1. (y'(x)) og 2. (y''(x)) deriverte kan det utledes bestemte størrelser for et objekt som ruller på banen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Kinetisk energi\n",
-    "Ved å legge ren rulling til grunn (v = r * w) kan vi utlede den totale kinetiske energien som \n",
+    "Med utgangspunkt i baneformen $y'(x)$ og dens 1. deriverte $y'(x)$ og 2. deriverte $y''(x)$ kan det utledes bestemte størrelser for et objekt som ruller ned banen.\n",
+    "$\\begin{equation}\n",
+    "\\mathit{E_k} = \\mathit{E_{trans}} + \\mathit{E_{rot}} = \\frac{1}{2} m v^2 + \\frac{1}{2} I \\omega^2 \\tag{1}\n",
+    "\\end{equation}$\n",
+    "I ligning (1) settes den totale kinetiske energien $\\mathit{E_k}$, som summen av transalsjonsenergien $\\mathit{E_{trans}}$ rotasjonsenergien $\\mathit{E_{rot}}$. Videre defineres $v$ som massesenteres fart, $w$ som rotasjonsfarten, $m$ som objektets masse og treghetsmomentet $I$ er gitt ved\n",
+    "$\\begin{equation}\n",
+    "I = c m r^2 \\tag{2}\n",
+    "\\end{equation}$\n",
+    "I ligning (2) er $r$ objektets radius og $c$ en konstant avhengig av objektets massefordeling.\n",
     "\n",
-    "(Ligning 1)\n",
+    "I startpunktet ($x = 0$) vil rotasjonsfarten og massesenterets fart være lik null som fører til total kinetisk energi lik null. I banens laveste punkt vil den potensielle energien være lik null. Med utganspunkt i at objektet ruller uten å slure ($v = r * w$) og at den mekanisk energi er bevart samt de nevnte grenseverdiene kan farten uteledes som\n",
+    "$\\begin{equation}\n",
+    "v(x) = \\sqrt{\\frac{2g(y_0 - y(x))}{1 + c}} \\tag{3}\n",
+    "\\end{equation}$\n",
+    "I ligning (3) er $v(x)$ massesenterets fart med hensyn på den horisontale posisjonen $x$. Videre defineres $g$ som tyngdeakselerasjonen, $\\mathit{y_0}$ som starthøyden og $y(x)$ som høyden med hensyn på $x$.\n",
     "\n",
-    "I ligning (1) settes Ek, den totale kinetiske energien, som summen av transalsjonsenergien (Etrans) rotasjonsenergien (Erot). Videre defineres v som massesenteres fart, w som rotasjonsfarten, m som objektets masse og treghetsmomentet I er gitt ved\n",
     "\n",
-    "(Ligning 2)\n",
     "\n",
-    "I ligning (2) er r objektets radius og c en konstant avhengig av objektets massefordeling. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fart\n",
-    "I startpunktet (x = 0) vil den rotasjonsfarten og massesenterets fart være lik null som fører til total kinetisk energi lik null. I banens laveste punkt vil den potensielle energien være lik null. Med utganspunkt i bevaring av mekanisk energi og de nevnte verdiene kan vi utlede farten som\n",
+    "Banens krumning k kan utrykkes som \n",
+    "$\\begin{equation}\n",
+    "k = \\frac{1}{R} = \\frac{y''}{(1 + (y')^2)^{3/2}} \\tag{4}\n",
+    "\\end{equation}$\n",
+    "I ligning (4) er krumningen lik inversen til krumningsradien $R$ og det følger fra dette at sentripitalakselerasjonen $a_{\\text{ort}}$ er lik\n",
+    "$\\begin{equation}\n",
+    "a_{\\text{ort}} = \\frac{v^2}{R} = v^2k = \\frac{2g(y_0 - y)}{1 + c} \\cdot \\frac{y''}{(1 + (y')^2)^{3/2}} \\tag{5}\n",
+    "\\end{equation}$\n",
     "\n",
-    "(Ligning 3)\n",
     "\n",
-    "I ligning (3) er v(x) massesenterets fart med hensyn på den horisontale posisjonen x. Videre defineres g som tyngdeakselerasjonen, y0 som starthøyden og y(x) som høyden med hensyn på x."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sentripetalaksellerasjon\n",
-    "Med utgangspunkt i at banens krumning k og kan utrykkes som \n",
     "\n",
-    "(Ligning 4)\n",
-    "\n",
-    "I ligning (4) er krumningen lik inversen til krumningsradien (R) og det fra dette at sentripital akselerasjonen (aort) er lik\n",
-    "\n",
-    "(Ligning 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Normalkraft\n",
     "Ved å ta i bruk Newtons 2. lov normalt på banen er \n",
+    "$\\begin{equation}\n",
+    " \\sum F_{\\text{ort}} = m \\cdot a_{\\text{ort}} \\tag{6}\n",
+    "\\end{equation}$\n",
+    "I ligning (6) er  $\\sum F_{\\text{ort}}$ summen av kreftene normalt på banen. Fra dette kan normalkraften $N(x)$ utrykkes som \n",
+    "$\\begin{equation}\n",
+    " N(x) = m(g\\cos(B(x)) + a_{\\text{ort}}) \\tag{7}\n",
+    "\\end{equation}$\n",
+    "I ligning (7) er $B(x)$ helningsvinkelen uttrykt som \n",
+    "$\\begin{equation}\n",
+    " B(x) = \\arctan(y'(x))\\tag{8}\n",
+    "\\end{equation}$\n",
     "\n",
-    "(Ligning 6)\n",
     "\n",
-    "I ligning (6) er  sum(Fort) summen av kreftene normalt på banen. Fra dette følger det at \n",
     "\n",
-    "(Ligning 7)\n",
-    "\n",
-    "I ligning (7) er B(x) helningsvinkelen uttrykt som \n",
-    "\n",
-    "(Ligning 8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Akselerasjon\n",
-    "Ved å ta i bruk Newtons 2. lov i tangentiell retning og grunleggende rotasjonsmekanikk får vi ligningene \n",
-    "\n",
-    "(Ligning 9)\n",
-    " \n",
-    "og \n",
-    "\n",
-    "(Ligning 10)\n",
-    "\n",
-    "I ligning (9) er F friksjonskraften og i ligning (10) er tau kraftmomentet og alfa rotasjonsaksellerasjonen. Ved å kombinere ligning (9) og ligning (10) samt at det ved ren rulling følger at aksellerasjon er lik produktet av treghetsmomentet og rotasjonsaksellerasjon (a = alfa * I) får vi at \n",
-    "\n",
-    "(Ligning 11)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Friksjon\n",
+    "Ved å ta i bruk Newtons 2. lov i tangentiell retning og grunleggende rotasjonsmekanikk utledes ligningene \n",
+    "$\\begin{equation}\n",
+    " -mg\\sin(B) + F = ma \\tag{9}\n",
+    "\\end{equation}$\n",
+    "og\n",
+    "$\\begin{equation}\n",
+    " \\tau = r \\cdot F = I \\cdot \\alpha \\tag{10}\n",
+    "\\end{equation}$\n",
+    "I ligning (9) er $F(x)$ friksjonskraften og i ligning (10) er $\\tau$ kraftmomentet og $\\alpha$ rotasjonsaksellerasjonen. Ved å kombinere ligning (9) og ligning (10) samt at det ved ren rulling følger at aksellerasjon er lik produktet av radius og rotasjonsaksellerasjon ($a = r*\\alpha$) er \n",
+    "$\\begin{equation}\n",
+    " a(x) = -\\frac{g\\sin(B)}{1+c} \\tag{11}\n",
+    "\\end{equation}$\n",
     "Fra ligning (9) og ligning (11) følger det at\n",
-    "\n",
-    "(Ligning 12)\n"
+    "$\\begin{equation}\n",
+    " F(x) = \\frac{c \\cdot m \\cdot g \\cdot \\sin(B)}{1 + c} \\tag{11}\n",
+    "\\end{equation}$\n"
    ]
   }
  ],
