--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -18,12 +18,8 @@
     "***\n",
     "### __Sammendrag__\n",
     "\n",
-    "Rapporten forklarer de fysiske kreftene som virker på en kule i en rullebane med varierende krumning. Banen er generert\n",
-    "med Scipys interpoleringsfunksjon Cubicspline. Størrelsene er beregnet ved hjelp av Python for både numeriske verdier og\n",
-    "for eksperimentell data, før resultatene for sluttfart, tidsbruk og friksjonskraft i forhold til normalkraft er blitt undersøkt\n",
-    "og presentert. Numerisk utregning ga sluttfart 0.95 m/s, mens forsøkene beregnet den gjennomsnittlige sluttfarten til\n",
-    "0.81 ± 0.02 m/s. Eksperimentell slutthastighet avviker noe fra den numerisk beregnede. Avviket kan for eksempel skyldes\n",
-    "feil relatert til målingene gjort i Tracker, menneskelige feil i gjennomførelsen av forsøket eller metodiske feil i beregningene.\n",
+    "Denne rapporten forklarer de fysiske kreftene som virker på en kule i en rullebane med varierende krumning. Scipys interpoleringsfunksjon Cubicspline er blitt brukt for å generere banen. Python er benyttet til å beregne størrelsen på både eksperimentell data og de numeriske verdiene. Videre undersøkes og presenteres resultatene for sluttfart og tidsbruk, samt forholdet mellom friksjonskraft og normalkraft. Når det kommer til slutthastighet ble det noe avvik mellom resultatet fra den numeriske utregningen og beregningen fra forsøkene. Ved numerisk utregning ble sluttfarten beregnet til 0.95 m/s, mens gjennomsnittlig sluttfart basert på forsøkene ble beregnet til 0.81 ± 0.2 m/s. Det kan være flere årsaker til avviket, eksempelvis feil i gjennomføringen av forsøkene eller feil i metodene brukt til beregninger.\n",
+    "\n",
     "***"
    ]
   },
@@ -78,7 +74,7 @@
    "source": [
     "### __6. Konklusjon__\n",
     "\n",
-    "Her kommer en konklusjon"
+    "Med 10 målinger som grunnlag regnet vi oss fram til en gjennomsnittlig slutthastighet $\\bar v=0.81\\pm0.02$ m/s. Det gir et 95\\% konfidensintervall for hastigheter mellom 0.77 og 0.85 m/s og et 75\\% konfidensintervall for hastigheter mellom 0.79 og 0.83 m/s. Numerisk beregnet vi sluttfarten til 1.62 m/s. Denne verdien er innenfor 2 standardavvik fra den eksperimentelle slutthastigheten. Avviket skyldes diverse feilkilder. Bruk av primitivt utstyr, bl.a. privat mobil og Tracker fører til nokså store målefeil. Tilfeldige og systematiske feil i forbindelse med at kula letter fra berg-og-dal-banen er en annen viktig feilkilde. Tar en utstyr og metode til betraktning fremstår standardavviket innenfor for hva en kan forvente, og vi konkluderer med at det er nokså gode sammenhenger mellom de numeriske og eksperimentelle resultatene.\n"
    ]
   },
   {
