resultater og plots

--- a/Rapportc.ipynb
+++ b/Rapportc.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -213,80 +213,87 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "test\n",
-    "### __4. Resultater__\n",
     "\n",
-    " Forsøk | v [m/s]\n",
-    " ------- | ------ \n",
-    " 1       | 1.514  \n",
-    " 2       | 1.491  \n",
-    " 3       | 1.514  \n",
-    " 4       | 1.525  \n",
-    " 5       | 1.486  \n",
-    " 6       | 1.465  \n",
-    " 7       | 1.568  \n",
-    " 8       | 1.519  \n",
-    " 9       | 1.490  \n",
-    " 10      | 1.511  \n",
-    "| Gjennomsnitt:   | 1.508 |\n",
-    "| Standardavvik   | 0.028 |\n",
-    "| Numerisk        | 1.516  |\n",
+    "#LAB 3\n",
+    "#3-\n",
+    "#\n",
+    "def rulletid(start, slutt):\n",
+    "    return (slutt/start)/30\n",
     "\n",
-    "Hei\n",
+    "r1 = rulletid(28, 76)\n",
+    "v1 = 1.514\n",
+    "r2 = rulletid(28, 76)\n",
+    "v2 = 1.491\n",
+    "r3 = rulletid(17,63)\n",
+    "v3 = 1.514\n",
+    "r4 = rulletid(10,58)\n",
+    "v4 = 1.525\n",
+    "r5 = rulletid(12,61)\n",
+    "v5 = 1.486\n",
+    "r6 = rulletid(19,67)\n",
+    "v6 = 1.465\n",
+    "r7 = rulletid(27,75)\n",
+    "v7 = 1.568\n",
+    "r8= rulletid(22,69)\n",
+    "v8= 1.519\n",
+    "r9 = rulletid(26,74)\n",
+    "v9 = 1.490\n",
+    "r10 = rulletid(5,53)\n",
+    "v10 = 1.511\n",
     "\n",
-    "| Forsøk | t [s] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 1.600   |\n",
-    "| 2      | 1.600   |\n",
-    "| 3      | 1.533   |\n",
-    "| 4      | 1.600   |\n",
-    "| 5      | 1.633  |\n",
-    "| 6      | 1.600   |\n",
-    "| 7      | 1.600   |\n",
-    "| 8      | 1.566   |\n",
-    "| 9      | 1.600   |\n",
-    "| 10     | 1.600   |\n",
-    "| Gjennomsnitt: | 1.593 |\n",
-    "| Standardavvik | 0.026 |\n",
-    "| Numerisk | 1.569 |\n",
+    "rulletider = [r1,r2,r3,r4,r5,r6,r7, r8,r9,r10]\n",
+    "fart = [v1,v2,v3,v4,v5,v6,v7, v8, v9, v10]\n",
     "\n",
-    "Hei og hopp\n",
+    "def energi(v):\n",
+    "    m = 0.031\n",
+    "    h_0 = 0.3\n",
+    "    h_1 = 0.136\n",
+    "    E_k = 0.5*m*v**2\n",
+    "    E_p_0 = h_0*m*9.81\n",
+    "    E_p_1 = m*9.81*h_1\n",
+    "    E_tap = E_p_0 - (E_k +E_p_1)\n",
+    "    return E_k, E_tap\n",
     "\n",
-    "| Forsøk | E_k [J] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 0.036   |\n",
-    "| 2      | 0.034   |\n",
-    "| 3      |  0.036   |\n",
-    "| 4      | 0.036   |\n",
-    "| 5      | 0.034  |\n",
-    "| 6      | 0.033   |\n",
-    "| 7      | 0.038  |\n",
-    "| 8      | 0.035   |\n",
-    "| 9      | 0.034   |\n",
-    "| 10     | 0.035   |\n",
-    "| Gjennomsnitt: | 0.036 |\n",
-    "| Standardavvik | 0.001|\n",
-    "| Numerisk | 0.035|\n",
+    "E_K = []\n",
+    "E_tap = []\n",
+    "for i in range(0,10):\n",
+    "    A, B = energi(fart[i])\n",
+    "    E_K.append(A)\n",
+    "    E_tap.append(B)\n",
     "\n",
-    "Nei\n",
     "\n",
-    "| Forsøk | Tap av kinetisk energi [J] |\n",
-    "| ------ | -------------------------- |\n",
-    "| 1      | 0.014                     |\n",
-    "| 2      | 0.015                    |\n",
-    "| 3      | 0.014                     |\n",
-    "| 4      |  0.014                    |\n",
-    "| 5      | 0.016                     |\n",
-    "| 6      | 0.017                     |\n",
-    "| 7      | 0.011                 |\n",
-    "| 8      | 0.014                      |\n",
-    "| 9      | 0.015                   |\n",
-    "| 10     | 0.014                    |\n",
-    "| Gjennomsnitt: | 0.015                 |\n",
-    "| Standardavvik | 0.001               |\n"
+    "mid_rulletid = sum(rulletider)/10\n",
+    "mid_fart = sum(fart)/10\n",
+    "mid_Ek= sum(E_K)/10\n",
+    "mid_Etap = sum(E_tap)/10\n",
+    "\n",
+    "\n",
+    "def standardavik(snitt, liste):\n",
+    "    sum = 0\n",
+    "    for i in range(0,10):\n",
+    "        sum+= (liste[i]-snitt)**2\n",
+    "    res = np.sqrt((1/9)*sum)\n",
+    "    return res\n",
+    "\n",
+    "def standardfeil(standardavik):\n",
+    "    return standardavik/np.sqrt(10)\n",
+    "\n",
+    "SA_rulletid = standardavik(mid_rulletid, rulletider)\n",
+    "SA_fart = standardavik(mid_fart, fart)\n",
+    "SA_Ek = standardavik(mid_Ek, E_K)\n",
+    "SA_Etap =standardavik(mid_Etap, E_tap)\n",
+    "\n",
+    "SF_rulletid = standardfeil(SA_rulletid)\n",
+    "SF_fart = standardfeil(SA_fart)\n",
+    "SF_Ek = standardfeil(SA_Ek)\n",
+    "SF_Etap =standardfeil(SA_Etap)\n",
+    "\n",
+    "        \n"
    ]
   },
   {
