--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "### __6. Konklusjon__\n",
     "\n",
-    "Med 10 målinger som grunnlag regnet vi oss fram til en gjennomsnittlig slutthastighet $\\bar v=0.81\\pm0.02$ m/s. Det gir et 95\\% konfidensintervall for hastigheter mellom 0.77 og 0.85 m/s og et 75\\% konfidensintervall for hastigheter mellom 0.79 og 0.83 m/s. Numerisk beregnet vi sluttfarten til 1.62 m/s. Denne verdien er innenfor 2 standardavvik fra den eksperimentelle slutthastigheten. Avviket skyldes diverse feilkilder. Bruk av primitivt utstyr, bl.a. privat mobil og Tracker fører til nokså store målefeil. Tilfeldige og systematiske feil i forbindelse med at kula letter fra berg-og-dal-banen er en annen viktig feilkilde. Tar en utstyr og metode til betraktning fremstår standardavviket innenfor for hva en kan forvente, og vi konkluderer med at det er nokså gode sammenhenger mellom de numeriske og eksperimentelle resultatene.\n"
+    "Basert på de 10 målingene vi gjorde beregnet vi den gjennomsnittelige slutthastigheten $\\bar v=0.81\\pm0.02$ m/s. Det gjør at hastigheter mellom 0.77 og 0.85 m/s vil ha et konfidensintervall på 95\\%, mens hastigheter mellom 0.79 og 0.83 m/s vil ha et konfidensintervall på 75\\%. Vi beregnet sluttfarten numerisk til å være 1.62 m/s, noe som vil si at den ligger innenfor 2 standardavvik fra vår eksperimentelle slutthastighet. Det er antageligvis  Avviket skyldes diverse feilkilder. Det at vi benyttet privat mobil og Tracker fører antageligvis til betydelige målefeil. Med tanke på hvilket utstyr man hadde tilgjengelig og metode mener vi at vi kan konkludere med at standardavviket ligger innenfor hva man kan forvente. Vi mener det er forholdsvis gode sammenhenger mellom våre numeriske og eksperimentelle resultater.\n"
    ]
   },
   {
