--- a/teori.ipynb
+++ b/teori.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### __2. Teori__\n",
+    "\n",
     "Med utgangspunkt i baneformen $y'(x)$ og dens 1. deriverte $y'(x)$ og 2. deriverte $y''(x)$ kan det utledes bestemte størrelser for et objekt som ruller ned banen.\n",
     "$\\begin{equation}\n",
     "\\mathit{E_k} = \\mathit{E_{trans}} + \\mathit{E_{rot}} = \\frac{1}{2} m v^2 + \\frac{1}{2} I \\omega^2 \\tag{1}\n",
@@ -13,15 +15,16 @@
     "I = c m r^2 \\tag{2}\n",
     "\\end{equation}$\n",
     "I ligning (2) er $r$ objektets radius og $c$ en konstant avhengig av objektets massefordeling.\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "I startpunktet ($x = 0$) vil rotasjonsfarten og massesenterets fart være lik null som fører til total kinetisk energi lik null. I banens laveste punkt vil den potensielle energien være lik null. Med utganspunkt i at objektet ruller uten å slure ($v = r * w$) og at den mekanisk energi er bevart samt de nevnte grenseverdiene kan farten uteledes som\n",
     "$\\begin{equation}\n",
     "v(x) = \\sqrt{\\frac{2g(y_0 - y(x))}{1 + c}} \\tag{3}\n",
     "\\end{equation}$\n",
     "I ligning (3) er $v(x)$ massesenterets fart med hensyn på den horisontale posisjonen $x$. Videre defineres $g$ som tyngdeakselerasjonen, $\\mathit{y_0}$ som starthøyden og $y(x)$ som høyden med hensyn på $x$.\n",
-    "\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "Banens krumning k kan utrykkes som \n",
     "$\\begin{equation}\n",
     "k = \\frac{1}{R} = \\frac{y''}{(1 + (y')^2)^{3/2}} \\tag{4}\n",
@@ -30,9 +33,9 @@
     "$\\begin{equation}\n",
     "a_{\\text{ort}} = \\frac{v^2}{R} = v^2k = \\frac{2g(y_0 - y)}{1 + c} \\cdot \\frac{y''}{(1 + (y')^2)^{3/2}} \\tag{5}\n",
     "\\end{equation}$\n",
-    "\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "Ved å ta i bruk Newtons 2. lov normalt på banen er \n",
     "$\\begin{equation}\n",
     " \\sum F_{\\text{ort}} = m \\cdot a_{\\text{ort}} \\tag{6}\n",
@@ -45,9 +48,9 @@
     "$\\begin{equation}\n",
     " B(x) = \\arctan(y'(x))\\tag{8}\n",
     "\\end{equation}$\n",
-    "\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "Ved å ta i bruk Newtons 2. lov i tangentiell retning og grunleggende rotasjonsmekanikk utledes ligningene \n",
     "$\\begin{equation}\n",
     " -mg\\sin(B) + F = ma \\tag{9}\n",
@@ -65,6 +68,11 @@
     " F(x) = \\frac{c \\cdot m \\cdot g \\cdot \\sin(B)}{1 + c} \\tag{11}\n",
     "\\end{equation}$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
