Lagt til beskrivelse av tabeller

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -199,6 +199,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "### __4. Resultater__\n",
+    "\n",
+    "Resultatene fra de ulike forsøkene er presentert i Tabell 2, 3, 4 og 5. Gjennomsnittsfarten var 1.508 $\\pm$ 0.028, mens den beregnede verdien ble målt til 1.516.\n",
+    "\n",
+    "Tabell 2: Sluttfart for kulen i ulike forsøk, med gjennomsnitt og tilhørende standardavvik. Den beregnede verdien er også inkludert.\n",
+    "\n",
+    " Forsøk | v [m/s]\n",
+    " ------- | ------ \n",
+    " 1       | 1.514  \n",
+    " 2       | 1.491  \n",
+    " 3       | 1.514  \n",
+    " 4       | 1.525  \n",
+    " 5       | 1.486  \n",
+    " 6       | 1.465  \n",
+    " 7       | 1.568  \n",
+    " 8       | 1.519  \n",
+    " 9       | 1.490  \n",
+    " 10      | 1.511  \n",
+    "| Gjennomsnitt:   | 1.508 |\n",
+    "| Standardavvik   | 0.028 |\n",
+    "| Numerisk        | 1.516  |\n",
+    "\n",
+    "Tabell 3: Sluttidspunktet for kulen i forsøkene, med angivelse av gjennomsnitt og tilhørende standardavvik. Den numeriske verdien er inkludert.\n",
+    "\n",
+    "| Forsøk | t [s] |\n",
+    "| ------ | ------- |\n",
+    "| 1      | 1.600   |\n",
+    "| 2      | 1.600   |\n",
+    "| 3      | 1.533   |\n",
+    "| 4      | 1.600   |\n",
+    "| 5      | 1.633  |\n",
+    "| 6      | 1.600   |\n",
+    "| 7      | 1.600   |\n",
+    "| 8      | 1.566   |\n",
+    "| 9      | 1.600   |\n",
+    "| 10     | 1.600   |\n",
+    "| Gjennomsnitt: | 1.593 |\n",
+    "| Standardavvik | 0.026 |\n",
+    "| Numerisk | 1.569 |\n",
+    "\n",
+    "Tabell 4: Den kinetiske energien i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik og den numeriske utregningen.\n",
+    "\n",
+    "| Forsøk | E_k [J] |\n",
+    "| ------ | ------- |\n",
+    "| 1      | 0.036   |\n",
+    "| 2      | 0.034   |\n",
+    "| 3      |  0.036   |\n",
+    "| 4      | 0.036   |\n",
+    "| 5      | 0.034  |\n",
+    "| 6      | 0.033   |\n",
+    "| 7      | 0.038  |\n",
+    "| 8      | 0.035   |\n",
+    "| 9      | 0.034   |\n",
+    "| 10     | 0.035   |\n",
+    "| Gjennomsnitt: | 0.036 |\n",
+    "| Standardavvik | 0.001|\n",
+    "| Numerisk | 0.035|\n",
+    "\n",
+    "Tabell 5: Tapet av kinetiske energi i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik.\n",
+    "\n",
+    "| Forsøk | Tap av kinetisk energi [J] |\n",
+    "| ------ | -------------------------- |\n",
+    "| 1      | 0.014                     |\n",
+    "| 2      | 0.015                    |\n",
+    "| 3      | 0.014                     |\n",
+    "| 4      |  0.014                    |\n",
+    "| 5      | 0.016                     |\n",
+    "| 6      | 0.017                     |\n",
+    "| 7      | 0.011                 |\n",
+    "| 8      | 0.014                      |\n",
+    "| 9      | 0.015                   |\n",
+    "| 10     | 0.014                    |\n",
+    "| Gjennomsnitt: | 0.015                 |\n",
+    "| Standardavvik | 0.001               |\n",
+    "\n",
+    "Sluttiden var i gjennomsnitt 1.593  $\\pm$ 0.026, mens den numeriske lå på 1.569. Den kinetiske energien hadde et gjennomsnitt på 0.036 $\\pm$ 0.001 med en beregnet verdi på 0.035. Tapet av kinetisk energi var i gjennomsnitt 0.015 $\\pm$ 0.001 Joule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### __4. Resultater__\n",
     "\n",
     "Her kommer resultater"
@@ -460,83 +543,6 @@
     "plt.title('|F(x)/N(x)|', fontsize=20)\n",
     "plt.grid()\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test\n",
-    "### __4. Resultater__\n",
-    "\n",
-    " Forsøk | v [m/s]\n",
-    " ------- | ------ \n",
-    " 1       | 1.514  \n",
-    " 2       | 1.491  \n",
-    " 3       | 1.514  \n",
-    " 4       | 1.525  \n",
-    " 5       | 1.486  \n",
-    " 6       | 1.465  \n",
-    " 7       | 1.568  \n",
-    " 8       | 1.519  \n",
-    " 9       | 1.490  \n",
-    " 10      | 1.511  \n",
-    "| Gjennomsnitt:   | 1.508 |\n",
-    "| Standardavvik   | 0.028 |\n",
-    "| Numerisk        | 1.516  |\n",
-    "\n",
-    "Hei\n",
-    "\n",
-    "| Forsøk | t [s] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 1.600   |\n",
-    "| 2      | 1.600   |\n",
-    "| 3      | 1.533   |\n",
-    "| 4      | 1.600   |\n",
-    "| 5      | 1.633  |\n",
-    "| 6      | 1.600   |\n",
-    "| 7      | 1.600   |\n",
-    "| 8      | 1.566   |\n",
-    "| 9      | 1.600   |\n",
-    "| 10     | 1.600   |\n",
-    "| Gjennomsnitt: | 1.593 |\n",
-    "| Standardavvik | 0.026 |\n",
-    "| Numerisk | 1.569 |\n",
-    "\n",
-    "Hei og hopp\n",
-    "\n",
-    "| Forsøk | E_k [J] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 0.036   |\n",
-    "| 2      | 0.034   |\n",
-    "| 3      |  0.036   |\n",
-    "| 4      | 0.036   |\n",
-    "| 5      | 0.034  |\n",
-    "| 6      | 0.033   |\n",
-    "| 7      | 0.038  |\n",
-    "| 8      | 0.035   |\n",
-    "| 9      | 0.034   |\n",
-    "| 10     | 0.035   |\n",
-    "| Gjennomsnitt: | 0.036 |\n",
-    "| Standardavvik | 0.001|\n",
-    "| Numerisk | 0.035|\n",
-    "\n",
-    "Nei\n",
-    "\n",
-    "| Forsøk | Tap av kinetisk energi [J] |\n",
-    "| ------ | -------------------------- |\n",
-    "| 1      | 0.014                     |\n",
-    "| 2      | 0.015                    |\n",
-    "| 3      | 0.014                     |\n",
-    "| 4      |  0.014                    |\n",
-    "| 5      | 0.016                     |\n",
-    "| 6      | 0.017                     |\n",
-    "| 7      | 0.011                 |\n",
-    "| 8      | 0.014                      |\n",
-    "| 9      | 0.015                   |\n",
-    "| 10     | 0.014                    |\n",
-    "| Gjennomsnitt: | 0.015                 |\n",
-    "| Standardavvik | 0.001               |\n"
    ]
   },
   {
