kommentarer til figurer

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -130,6 +130,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For å beregne relevante numeriske verdier, brukte vi formlene som ble introdusert i teori-avsnittet. Vi regnet ut x- og y-verdier ved hver hele millimeter langs x-aksen, og lagret dem i to lister. For x-listen betyr dette ganske enkelt at den inneholdt tallene fra 0 til og med 1400 i kronologisk rekkefølge, mens y-listen inneholdt de respektive y-verdiene for hver av disse x-verdiene, kalkulert ut ifra interpolasjonen gitt av `CubicSpline`. Disse verdiene, i kombinasjon med energibevaringslover, ble brukt til å regne ut fart, sentripetalakselerasjon, normalkraft og krumning.\n",
+    "\n",
+    "#### Eksperimentell Gjennomføring\n",
+    "\n",
+    "For den eksperimentelle delen av forsøket, ble oppsettet konstruert i henhold til de åtte valgte festepunktene, som vist i Figur 3. En meterstokk ble brukt for å sikre korrekt lengdeforhold i måleprogrammet. Objektet som ble brukt i forsøket var en liten, svart gummikule med en masse på 30 ± 0.5 g.\n",
+    "\n",
+    "Hvert forsøk ble filmet med en frekvens på 60 fps og analysert ved hjelp av `Tracker`-programmet. Dette programmet lar oss spore objektets bevegelse over tid og måle viktige parametre. Ti forsøk ble gjennomført, og for hvert forsøk ble data for x, y, t, og v lagret i en fil på tekstformat. Dette gjorde det enkelt å få tilgang til dataene i Python for videre analyse. De eksperimentelle verdiene ble beregnet på samme måte som de teoretiske verdiene, og deretter sammenlignet med hverandre."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### __4. Resultater__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 423,
    "metadata": {},
@@ -186,22 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For å beregne relevante numeriske verdier, brukte vi formlene som ble introdusert i teori-avsnittet. Vi regnet ut x- og y-verdier ved hver hele millimeter langs x-aksen, og lagret dem i to lister. For x-listen betyr dette ganske enkelt at den inneholdt tallene fra 0 til og med 1400 i kronologisk rekkefølge, mens y-listen inneholdt de respektive y-verdiene for hver av disse x-verdiene, kalkulert ut ifra interpolasjonen gitt av `CubicSpline`. Disse verdiene, i kombinasjon med energibevaringslover, ble brukt til å regne ut fart, sentripetalakselerasjon, normalkraft og krumning.\n",
-    "\n",
-    "#### Eksperimentell Gjennomføring\n",
-    "\n",
-    "For den eksperimentelle delen av forsøket, ble oppsettet konstruert i henhold til de åtte valgte festepunktene, som vist i Figur 3. En meterstokk ble brukt for å sikre korrekt lengdeforhold i måleprogrammet. Objektet som ble brukt i forsøket var en liten, svart gummikule med en masse på 30 ± 0.5 g.\n",
-    "\n",
-    "Hvert forsøk ble filmet med en frekvens på 60 fps og analysert ved hjelp av `Tracker`-programmet. Dette programmet lar oss spore objektets bevegelse over tid og måle viktige parametre. Ti forsøk ble gjennomført, og for hvert forsøk ble data for x, y, t, og v lagret i en fil på tekstformat. Dette gjorde det enkelt å få tilgang til dataene i Python for videre analyse. De eksperimentelle verdiene ble beregnet på samme måte som de teoretiske verdiene, og deretter sammenlignet med hverandre."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### __4. Resultater__\n",
-    "\n",
-    "Her kommer resultater"
+    "__Figur 1:__  Visuell fremstilling av kurvebanen. Festepunkt markert i oransje. Skruhøyder oppgitt under i millimeter."
    ]
   },
   {
@@ -283,6 +288,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Figur 2:__ Plot av banens form, sammenlignet med plot av banens form importert fra Tracker. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 425,
    "metadata": {},
@@ -331,6 +343,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Figur 3:__ Plot av farten med hensyn på den horisontale posisjonen. Numerisk utregning i rød, eksperimentell plot i blå. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 426,
    "metadata": {},
@@ -370,6 +389,13 @@
     "plt.title('Normalkraft', fontsize=20)\n",
     "plt.grid()\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Figur 4:__ Plot av den numerisk utregnede normalkraften N mot den horisontale posisjonen i meter"
    ]
   },
   {
@@ -417,6 +443,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Figur 5:__ Plot av den numerisk utregnede friksjonskraften F mot den horisontale posisjonen i meter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 428,
    "metadata": {},
@@ -460,6 +493,13 @@
     "plt.title('|F(x)/N(x)|', fontsize=20)\n",
     "plt.grid()\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Figur 6:__ Plot av forholdet i absoluttverdi mellom Friksjonskraften F og Normalkraften N mot den horisontale posisjonen. "
    ]
   },
   {
@@ -583,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
