endret metode og resultater til rett

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -112,7 +112,9 @@
     "<li> Banen hele veien har så liten helningsvinkel at kula ikke glir, </li>\n",
     "<li> Banen faktisk er en berg-og-dal-bane, med både berg (bakketopp) og dal (bunnpunkt) underveis. </li>\n",
     "\n",
-    "Etter noen forsøk, endte vi opp med følgende festepunkter for kurven:\n",
+    "Etter noen forsøk, endte vi opp med festepunktene som fremstilles i tabell 1\n",
+    "\n",
+    "Tabell 1: Festepunktene for banen med avstand fra startpunktet i andre kollene og høyden i tredje kolonne. \n",
     "\n",
     "| Index | x (mm) | y (mm) |\n",
     "|-------|--------|--------|\n",
