--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "Etter noen forsøk, endte vi opp med festepunktene som fremstilles i tabell 1\n",
     "\n",
-    "Tabell 1: Festepunktene for banen med avstand fra startpunktet i andre kollene og høyden i tredje kolonne. \n",
+    "__Tabell 1__: Festepunktene for banen med avstand fra startpunktet i andre kollene og høyden i tredje kolonne. \n",
     "\n",
     "| Index | x (mm) | y (mm) |\n",
     "|-------|--------|--------|\n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Figur 1:__  Visuell fremstilling av kurvebanen. Festepunkt markert i oransje. Skruhøyder oppgitt under i millimeter."
+    "__Figur 1:__  Visuell fremstilling av kurvebanen. Festepunkt markert i oransje. Skruhøyder oppgitt under i millimeter.\n",
     "For å beregne relevante numeriske verdier, brukte vi formlene som ble introdusert i teori-avsnittet. Vi regnet ut x- og y-verdier ved hver hele millimeter langs x-aksen, og lagret dem i to lister. For x-listen betyr dette ganske enkelt at den inneholdt tallene fra 0 til og med 1400 i kronologisk rekkefølge, mens y-listen inneholdt de respektive y-verdiene for hver av disse x-verdiene, kalkulert ut ifra interpolasjonen gitt av `CubicSpline`. Disse verdiene, i kombinasjon med energibevaringslover, ble brukt til å regne ut fart, sentripetalakselerasjon, normalkraft og krumning.\n",
     "\n",
     "#### Eksperimentell Gjennomføring\n",
@@ -227,7 +227,7 @@
     "\n",
     "Resultatene fra de ulike forsøkene er presentert i Tabell 2, 3, 4 og 5. Gjennomsnittsfarten var 1.508 $\\pm$ 0.028, mens den beregnede verdien ble målt til 1.516.\n",
     "\n",
-    "Tabell 2: Sluttfart for kulen i ulike forsøk, med gjennomsnitt og tilhørende standardavvik. Den beregnede verdien er også inkludert.\n",
+    "__Tabell 2__: Sluttfart for kulen i ulike forsøk, med gjennomsnitt og tilhørende standardavvik. Den beregnede verdien er også inkludert.\n",
     "\n",
     " Forsøk | v [m/s]\n",
     " ------- | ------ \n",
@@ -245,7 +245,7 @@
     "| Standardavvik   | 0.028 |\n",
     "| Numerisk        | 1.516  |\n",
     "\n",
-    "Tabell 3: Sluttidspunktet for kulen i forsøkene, med angivelse av gjennomsnitt og tilhørende standardavvik. Den numeriske verdien er inkludert.\n",
+    "__Tabell 3__: Sluttidspunktet for kulen i forsøkene, med angivelse av gjennomsnitt og tilhørende standardavvik. Den numeriske verdien er inkludert.\n",
     "\n",
     "| Forsøk | t [s] |\n",
     "| ------ | ------- |\n",
@@ -263,7 +263,7 @@
     "| Standardavvik | 0.026 |\n",
     "| Numerisk | 1.569 |\n",
     "\n",
-    "Tabell 4: Den kinetiske energien i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik og den numeriske utregningen.\n",
+    "__Tabell 4__: Den kinetiske energien i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik og den numeriske utregningen.\n",
     "\n",
     "| Forsøk | E_k [J] |\n",
     "| ------ | ------- |\n",
@@ -281,7 +281,7 @@
     "| Standardavvik | 0.001|\n",
     "| Numerisk | 0.035|\n",
     "\n",
-    "Tabell 5: Tapet av kinetiske energi i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik.\n",
+    "__Tabell 5__: Tapet av kinetiske energi i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik.\n",
     "\n",
     "| Forsøk | Tap av kinetisk energi [J] |\n",
     "| ------ | -------------------------- |\n",
@@ -724,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
