--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -305,9 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### __4. Resultater__\n",
-    "\n",
-    "Her kommer resultater"
+    "### __4. Resultater__\n"
    ]
   },
   {
@@ -601,83 +599,6 @@
    "metadata": {},
    "source": [
     "__Figur 6:__ Plot av forholdet i absoluttverdi mellom Friksjonskraften F og Normalkraften N mot den horisontale posisjonen. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test\n",
-    "### __4. Resultater__\n",
-    "\n",
-    " Forsøk | v [m/s]\n",
-    " ------- | ------ \n",
-    " 1       | 1.514  \n",
-    " 2       | 1.491  \n",
-    " 3       | 1.514  \n",
-    " 4       | 1.525  \n",
-    " 5       | 1.486  \n",
-    " 6       | 1.465  \n",
-    " 7       | 1.568  \n",
-    " 8       | 1.519  \n",
-    " 9       | 1.490  \n",
-    " 10      | 1.511  \n",
-    "| Gjennomsnitt:   | 1.508 |\n",
-    "| Standardavvik   | 0.028 |\n",
-    "| Numerisk        | 1.516  |\n",
-    "\n",
-    "Hei\n",
-    "\n",
-    "| Forsøk | t [s] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 1.600   |\n",
-    "| 2      | 1.600   |\n",
-    "| 3      | 1.533   |\n",
-    "| 4      | 1.600   |\n",
-    "| 5      | 1.633  |\n",
-    "| 6      | 1.600   |\n",
-    "| 7      | 1.600   |\n",
-    "| 8      | 1.566   |\n",
-    "| 9      | 1.600   |\n",
-    "| 10     | 1.600   |\n",
-    "| Gjennomsnitt: | 1.593 |\n",
-    "| Standardavvik | 0.026 |\n",
-    "| Numerisk | 1.569 |\n",
-    "\n",
-    "Hei og hopp\n",
-    "\n",
-    "| Forsøk | E_k [J] |\n",
-    "| ------ | ------- |\n",
-    "| 1      | 0.036   |\n",
-    "| 2      | 0.034   |\n",
-    "| 3      |  0.036   |\n",
-    "| 4      | 0.036   |\n",
-    "| 5      | 0.034  |\n",
-    "| 6      | 0.033   |\n",
-    "| 7      | 0.038  |\n",
-    "| 8      | 0.035   |\n",
-    "| 9      | 0.034   |\n",
-    "| 10     | 0.035   |\n",
-    "| Gjennomsnitt: | 0.036 |\n",
-    "| Standardavvik | 0.001|\n",
-    "| Numerisk | 0.035|\n",
-    "\n",
-    "Nei\n",
-    "\n",
-    "| Forsøk | Tap av kinetisk energi [J] |\n",
-    "| ------ | -------------------------- |\n",
-    "| 1      | 0.014                     |\n",
-    "| 2      | 0.015                    |\n",
-    "| 3      | 0.014                     |\n",
-    "| 4      |  0.014                    |\n",
-    "| 5      | 0.016                     |\n",
-    "| 6      | 0.017                     |\n",
-    "| 7      | 0.011                 |\n",
-    "| 8      | 0.014                      |\n",
-    "| 9      | 0.015                   |\n",
-    "| 10     | 0.014                    |\n",
-    "| Gjennomsnitt: | 0.015                 |\n",
-    "| Standardavvik | 0.001               |\n"
    ]
   },
   {
