--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -450,16 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2895ee790>"
+       "<matplotlib.legend.Legend at 0x16c7d2150>"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,16 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2895c1150>"
+       "<matplotlib.legend.Legend at 0x16c8dcf90>"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -550,16 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x289670e10>"
+       "<matplotlib.legend.Legend at 0x16c855650>"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
