--- a/teori.ipynb
+++ b/teori.ipynb
@@ -72,7 +72,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Friksjonskraften (11) kan ikke være større enn produkten av normalkraften (7) og friksjonskoeffisienten $\\mu$. Fra dette følger det at \n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\left| \\frac{F(x)}{N(x)} \\right| = \\mu \\tag{12}\n",
+    "\\end{equation}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avstanden kulen ruller i horisontal retning kan deles opp i $n$ delintervaller. Med utgangspunkt i at fart i $x$-retning i posisjon $x$ på delintervall $n$ er gitt som $v_{x, n}=v_n*cos(B_n)$ og at gjennomsnittelig fart $\\overline{v}_{x, n}$ er gitt ved\n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\overline{v}_{x, n} = \\frac{\\Delta x_n}{\\Delta t_n} \\tag{13}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "og \n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\overline{v}_{x, n} = \\frac{1}{2}(v_{x, n-1} + v_{x,n}) \\tag{14}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "følger det at tiden kulen ruller avstanden $\\Delta x_n$ er gitt som \n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\Delta t_n = \\frac{\\Delta x_n}{\\overline{v}_{x,n}} = \\frac{2 \\Delta x_n}{v_{x, n-1} + v_{x, n}} \\tag{15}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "Ved å summere opp disse tidene er sluttiden gitt ved\n",
+    "\n",
+    "$\\begin{equation}\n",
+    " t = \\sum_{i=1}^{n} \\Delta t_i \\tag{16}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
