--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -102,7 +102,34 @@
     "Fra ligning (9) og ligning (11) følger det at\n",
     "$\\begin{equation}\n",
     " F(x) = \\frac{c \\cdot m \\cdot g \\cdot \\sin(B)}{1 + c} \\tag{11}\n",
-    "\\end{equation}$\n"
+    "\\end{equation}$\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "Avstanden kulen ruller i horisontal retning kan deles opp i $n$ delintervaller. Med utgangspunkt i at fart i $x$-retning i posisjon $x$ på delintervall $n$ er gitt som $v_{x, n}=v_n*cos(B_n)$ og at gjennomsnittelig fart $\\overline{v}_{x, n}$ er gitt ved\n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\overline{v}_{x, n} = \\frac{\\Delta x_n}{\\Delta t_n} \\tag{13}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "og \n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\overline{v}_{x, n} = \\frac{1}{2}(v_{x, n-1} + v_{x,n}) \\tag{14}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "følger det at tiden kulen ruller avstanden $\\Delta x_n$ er gitt som \n",
+    "\n",
+    "$\\begin{equation}\n",
+    " \\Delta t_n = \\frac{\\Delta x_n}{\\overline{v}_{x,n}} = \\frac{2 \\Delta x_n}{v_{x, n-1} + v_{x, n}} \\tag{15}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "Ved å summere opp disse tidene er sluttiden gitt ved\n",
+    "\n",
+    "$\\begin{equation}\n",
+    " t = \\sum_{i=1}^{n} \\Delta t_i \\tag{16}\n",
+    "\\end{equation}$\n",
+    "\n"
    ]
   },
   {
