lagt til tap kiinetisk i resultat

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -222,9 +222,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "### __4. Resultater__\n",
-    "\n",
     "Resultatene fra de ulike forsøkene er presentert i Tabell 2, 3, 4 og 5. Gjennomsnittsfarten var 1.508 $\\pm$ 0.028, mens den beregnede verdien ble målt til 1.516.\n",
     "\n",
     "__Tabell 2__: Sluttfart for kulen i ulike forsøk, med gjennomsnitt og tilhørende standardavvik. Den beregnede verdien er også inkludert.\n",
@@ -299,13 +296,6 @@
     "| Standardavvik | 0.001               |\n",
     "\n",
     "Sluttiden var i gjennomsnitt 1.593  $\\pm$ 0.026, mens den numeriske lå på 1.569. Den kinetiske energien hadde et gjennomsnitt på 0.036 $\\pm$ 0.001 med en beregnet verdi på 0.035. Tapet av kinetisk energi var i gjennomsnitt 0.015 $\\pm$ 0.001 Joule"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### __4. Resultater__\n"
    ]
   },
   {
@@ -616,7 +606,7 @@
    "source": [
     "### __6. Konklusjon__\n",
     "\n",
-    "Basert på de 10 målingene vi gjorde beregnet vi den gjennomsnittelige slutthastigheten $\\bar v=1.508\\pm0.028$ m/s. Vi beregnet sluttfarten numerisk til å være 1.516 m/s, noe som vil si at den ligger innenfor standardavviket fra vår eksperimentelle slutthastighet. Dette tyder på at arbeidet har vært nøyaktig og beregningene riktig. Det er alikevel rimelig å anta at det har vært noen feilkilder i prosessen. Det at vi benyttet privat mobil og Tracker kan antageligvis føre til betydelige målefeil. Med tanke på hvilket utstyr man hadde tilgjengelig og metode mener vi at vi kan konkludere med at standardavviket ligger innenfor hva man kan forvente. Vi mener det er gode sammenhenger mellom våre numeriske og eksperimentelle resultater.\n"
+    "Basert på de 10 målingene vi gjorde beregnet vi den gjennomsnittelige slutthastigheten $\\bar v=1.508\\pm0.028$ m/s. Vi beregnet sluttfarten numerisk til å være 1.516 m/s, noe som vil si at den ligger innenfor standardavviket fra vår eksperimentelle slutthastighet.Vi målte en gjennomsnittlig kinetisk energi på 0.036 $\\pm$ 0.001 J. Det numeriske resultatet var på 0.035 J. Vi beregnet tapet av den kinetiske energien til 0.015 $\\pm$ 0.001 J. Dette tyder på at arbeidet har vært nøyaktig og beregningene riktig. Det er alikevel rimelig å anta at det har vært noen feilkilder i prosessen. Det er relevant for den numeriske utregningen at vi neglijerer luftmotstand og friksjon, noe som vil være et avvik fra målte resultater. Det at vi benyttet privat mobil og Tracker kan antageligvis føre til betydelige målefeil. Med tanke på hvilket utstyr man hadde tilgjengelig og metode mener vi at vi kan konkludere med at standardavviket ligger innenfor hva man kan forvente. Vi mener det er gode sammenhenger mellom våre numeriske og eksperimentelle resultater.\n"
    ]
   },
   {
