Lagt til diskusjon og E_k

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -345,18 +345,18 @@
     "\n",
     "__Tabell 2__: Sluttfart for kulen i ulike forsøk, med gjennomsnitt og tilhørende standardavvik. Den beregnede verdien er også inkludert.\n",
     "\n",
-    " Forsøk | v [m/s]\n",
-    " ------- | ------ \n",
-    " 1       | 1.514  \n",
-    " 2       | 1.491  \n",
-    " 3       | 1.514  \n",
-    " 4       | 1.525  \n",
-    " 5       | 1.486  \n",
-    " 6       | 1.465  \n",
-    " 7       | 1.568  \n",
-    " 8       | 1.519  \n",
-    " 9       | 1.490  \n",
-    " 10      | 1.511  \n",
+    "| Forsøk | v [m/s]|\n",
+    "| ------- | ------| \n",
+    "|1       | 1.514  |\n",
+    "| 2       | 1.491  |\n",
+    "| 3       | 1.514  |\n",
+    "| 4       | 1.525  |\n",
+    "| 5       | 1.486  |\n",
+    "| 6       | 1.465  |\n",
+    "| 7       | 1.568  |\n",
+    "| 8       | 1.519  |\n",
+    "| 9       | 1.490  |\n",
+    "| 10      | 1.511  |\n",
     "| Gjennomsnitt:   | 1.508 |\n",
     "| Standardavvik   | 0.028 |\n",
     "| Numerisk        | 1.516  |\n",
@@ -381,7 +381,7 @@
     "\n",
     "__Tabell 4__: Den kinetiske energien i sluttpunktet for de forskjellige forsøkene, men gjennomsnitt, standardavvik og den numeriske utregningen.\n",
     "\n",
-    "| Forsøk | E_k [J] |\n",
+    "| Forsøk | E<sub>k</sub> [J] |\n",
     "| ------ | ------- |\n",
     "| 1      | 0.036   |\n",
     "| 2      | 0.034   |\n",
@@ -722,8 +722,17 @@
    "metadata": {},
    "source": [
     "### __5. Diskusjon__\n",
+    "Resultatene fra de ti gjennomførte forsøkene er presentert i tabellene ovenfor. For å gjøre det enkelt vil det være gjennomsnittsverdien fra disse målingene som omtales. Alle eksperimentelle data er hentet fra Tracker.\n",
     "\n",
-    "Her kommer en diskusjon"
+    "I figur 2 kan vi se den aktuelle banen plottet mot festepunktshøydene som beregningene tar utgangspunkt i. Vi er mest ute etter høydedifferansene ettersom at dette gir grunnlag for farten. Høydedifferansene er tilnærmet like for den beregnede og eksperimentelle banen. Mot banens slutt ligger den faktiske banen helt nært den teoretiske. Den faktiske banen krummer derimot tidligere opp enn den teoretiske. Dette kan vi grunnlag til at sluttfarten er noe lavere enn det numeriske estimatet.\n",
+    "\n",
+    "Snittet for målingene for sluttfarten er lik 1.508 $\\pm$ 0.028 m/s. Dette kan leses i tabell 2. Den numerisk utregnede sluttfarten var på 1.516 m/s. Vi ser med det at den numerisk utregnede sluttfarten ligger innenfor snittet dersom vi tar standardavviket i betraktning. Det er flere ting som kan skyldes den noe lavere sluttfarten. Avviket på 0.008 m/s kan skyldes unøyaktighet i målinger under oppsett av festepunktene i kulebanen. For å komme fram til sluttfarten ble ligning (3) brukt. Denne tar ikke hensyn til luftmotstand noe som kan forklare en noe lavere fart. Avviket er derimot såpass lite at det kan regnes som et plusibelt resultat.\n",
+    "\n",
+    "Rulletiden er presentert i tabell 3. Rulletiden vi kom fram til i forsøket var på 1.593 $\\pm$ 0.0026 s. Den numerisk utregnende rulletiden var noe lavere på 1.569 s. Rulletiden, både eksperimentell og numerisk vil ha en direkte sammenheng med farten. Vi kan se fra tabellen \"Velocity Comparison\" at kulen gjevnt over hadde en noe lavere fart enn hva vi regnet oss fram til numerisk. Dette har da blitt utslagsgivende for den totale rulletiden. Antagelser og beregninger for fart gir grunnlaget for rulletiden. Siden vi vet at vi hadde en noe lavere sluttfart, og gjevnt over lavere fart, følger det som en logisk konsekvens at rulletiden vil bli noe høyere.\n",
+    "\n",
+    "Den kinetiske energien og tapet av denne gjennom forsøket er beskrevet i tabell 5. Det ble gjort målinger for den totale kinetiske energien til kula gjennom baneformen. Denne ble funnet som 0.0036 $\\pm$ 0.001 J. Numerisk ble denne regnet som 0.0035 J. Fra ligning (1) ser vi at farten i stor grad påvirker den kinetiske energien. Det er dermed grunn til å tenke at vi skulle hatt en noe lavere kinetisk energi. Derimot ser vi, etter målinger fra Tracker, at denne er godt innenfor hva vi hadde beregnet i forkant. Vi kan og se på tapet av kinetisk energi for forsøkene at denne og er svært lav på 0.015 $\\pm$ 0.001 J. Det tapet som oppstår stammer mest sannsynlig fra luftmotstand og friksjon mellom kula og banen. Ettersom vi har et lite legeme som ruller tilnærmet rent er det sannsynlig at vi har et lite tap av total kinetisk energi. I ideelle forhold vil tapet av kinetisk energi være likt null. Ettersom vi ikke hadde idelle forhold, med hensyn på luftmotstand og friksjon som nevnt over, vil det være helt plusibelt å regne med noe tap av kinetisk energi.\n",
+    "\n",
+    "I figur 4 kan vi se et plot som viser normalkraften fra banen til kula. Ser vi dette oppmot banens form ser vi en tydelig sammenheng med at normalkraften øker i motbakkene og avtar når kula ruller nedover. Fra ligningene (7) og (8) som er brukt til å beregne normalkraften, kan vi se at den avhenger av stigningen til $y'(x)$, hvor $y(x)$ er baneformen. Det er en brattere vinkel vil dermed gi større normalkraft, og en slakere vil gi en mindre normalkraft. Den beregnede normalkraften er dermed sannsynlig sett opp mot formen av banen."
    ]
   },
   {
