Lagt inn referanser

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -750,7 +750,9 @@
    "source": [
     "### __Referanser__\n",
     "\n",
-    "Referanseliste her"
+    "OpenAI. (2023). ChatGPT (20. april-versjon) [Stor språkmodell]. https://chat.openai.com/vOpenAI. (2023). ChatGPT (20. april-versjon) [Stor språkmodell]. https://chat.openai.com/\n",
+    "\n",
+    "OpenAI. (2023). ChatGPT (27. september-versjon) [Stor språkmodell]. https://chat.openai.com/"
    ]
   }
  ],
