lagt til referanser ekte

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -748,9 +748,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### __Referanser__\n",
+    "### __7. Referanser__\n",
     "\n",
-    "OpenAI. (2023). ChatGPT (20. april-versjon) [Stor språkmodell]. https://chat.openai.com/vOpenAI. (2023). ChatGPT (20. april-versjon) [Stor språkmodell]. https://chat.openai.com/\n",
+    "J. A. Støvneng (2023). $Fysikk: Labprosjekt Vår 2023$ [Studentoppgave, Instiutt for fysikk] https://home.phys.ntnu.no/brukdef/undervisning/fyslab/files/labligninger_V23.pdf  \n",
+    "\n",
+    "M. B. Lilledahl & V. Risinggård (2017) $Målinger og usikkerhet$ [Studentoppgave, Instiutt for fysikk] https://home.phys.ntnu.no/brukdef/undervisning/fyslab/files/usikkerhet.pdf \n",
     "\n",
     "OpenAI. (2023). ChatGPT (27. september-versjon) [Stor språkmodell]. https://chat.openai.com/"
    ]
